Fixed layout on mobile screens, increased repos limit from 30 to 100

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -14,8 +14,6 @@ code {
 }
 
 .appContainer {
-  width: 100vh;
-  /* max-width: 900px; */
   padding-top: 12px;
   padding-bottom: 12px;
 }
